@@ -4,18 +4,28 @@ import TRaMis8khae.starbucks.admin.dto.in.TopCategoryRequestDto;
 import TRaMis8khae.starbucks.admin.entity.BottomCategory;
 import TRaMis8khae.starbucks.admin.entity.MiddleCategory;
 import TRaMis8khae.starbucks.admin.entity.TopCategory;
+import TRaMis8khae.starbucks.admin.infrastructure.BottomCategoryRepository;
+import TRaMis8khae.starbucks.admin.infrastructure.MiddleCategoryRepository;
 import TRaMis8khae.starbucks.admin.infrastructure.TopCategoryRepository;
+import TRaMis8khae.starbucks.admin.vo.TopCategoryRequestVo;
 import TRaMis8khae.starbucks.event.entity.Event;
 import TRaMis8khae.starbucks.event.entity.ProductEventList;
+import TRaMis8khae.starbucks.event.infrastructure.EventRepository;
 import TRaMis8khae.starbucks.media.entity.Media;
 import TRaMis8khae.starbucks.media.entity.MediaKind;
 import TRaMis8khae.starbucks.media.entity.MediaType;
+import TRaMis8khae.starbucks.media.infrastructure.MediaRepository;
 import TRaMis8khae.starbucks.product.entity.Product;
+import TRaMis8khae.starbucks.product.infrastructure.ProductRepository;
 import TRaMis8khae.starbucks.review.dto.ReviewCrawlingAddDto;
+import TRaMis8khae.starbucks.review.entity.Review;
+import TRaMis8khae.starbucks.review.infrastructure.ReviewRepository;
 import TRaMis8khae.starbucks.vendor.entity.ProductCategoryList;
+import TRaMis8khae.starbucks.vendor.infrastructure.ProductCategoryListRepository;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.PostConstruct;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.poi.ss.usermodel.Cell;
 import org.apache.poi.ss.usermodel.Row;
@@ -33,39 +43,39 @@ import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-
 
 @Slf4j
 @Profile("crawling")  // "crawling" 프로파일이 활성화되었을 때만 이 설정이 적용됨
 @Component
+@RequiredArgsConstructor
 public class CrawlingInit {
-
+    
+    private final ReviewRepository reviewRepository;
+    private final EventRepository eventRepository;
+    private final ProductRepository productRepository;
+    private final ProductCategoryListRepository productCategoryListRepository;
+    private final MediaRepository mediaRepository;
     private final TopCategoryRepository topCategoryRepository;
-
-    public CrawlingInit(TopCategoryRepository topCategoryRepository) {
-        this.topCategoryRepository = topCategoryRepository;
-    }
+    private final MiddleCategoryRepository middleCategoryRepository;
+    private final BottomCategoryRepository bottomCategoryRepository;
 
     @PostConstruct
     public void parseAndSaveData() throws IOException {
-
-        log.info("start!!!!!");
-
         // 엑셀 파일 경로 (예시로 로컬 파일 경로 사용)
-        String excelFilePath = "D:\\starbucks_products4.xlsx";
+        String excelFilePath = "/Users/TalkFile_starbucks_products.xlsx";
 
         // 엑셀 데이터 파싱 및 DB 저장
         try {
+            log.info("파일 읽기 시작");
             parseExcelData(excelFilePath);
         } catch (IOException e) {
             log.error("파일 읽기 오류 : {}", e.getMessage());
         }
     }
 
-
     // 엑셀 데이터를 파싱하고 DB에 저장하는 메서드
     public void parseExcelData(String excelFilePath) throws IOException {
+
         FileInputStream file = new FileInputStream(excelFilePath);
         Workbook workbook = new XSSFWorkbook(file);
         int topCount = 0;
@@ -83,140 +93,132 @@ public class CrawlingInit {
         Sheet eGift = workbook.getSheetAt(10); //커피/음료/e-gift
 
         TopCategory total = parseTopCategory("전체", topCount++);
+        saveTopCategory(total);
 
         TopCategory kitchenTable = parseTopCategory("키친/테이블", topCount++);
-        MiddleCategory kitchenTableMid = parseMiddleCategory(kitchenTable, 2);
+        MiddleCategory kitchenTableMid = parseMiddleCategory(kitchenTable, 0);
         BottomCategory kitchenTableBot1 = parseBottomCategory(kitchenTableMid, tumblr.getSheetName(), 0);
         BottomCategory kitchenTableBot2 = parseBottomCategory(kitchenTableMid, mug.getSheetName(), 1);
+        saveTopCategory(kitchenTable);
+        saveMiddleCategory(kitchenTableMid);
+        saveBottomCategory(kitchenTableBot1);
+        saveBottomCategory(kitchenTableBot2);
 
         TopCategory food = parseTopCategory("푸드", topCount++);
-        MiddleCategory foodMid = parseMiddleCategory(food, 1);
+        MiddleCategory foodMid = parseMiddleCategory(food, 0);
         BottomCategory foodBot1 = parseBottomCategory(foodMid, bakery.getSheetName(), 0);
         BottomCategory foodBot2 = parseBottomCategory(foodMid, cake.getSheetName(), 1);
         BottomCategory foodBot3 = parseBottomCategory(foodMid, sandwich.getSheetName(), 2);
+        saveTopCategory(food);
+        saveMiddleCategory(foodMid);
+        saveBottomCategory(foodBot1);
+        saveBottomCategory(foodBot2);
+        saveBottomCategory(foodBot3);
 
         TopCategory coffeeTea = parseTopCategory("커피/티용품", topCount++);
-        MiddleCategory coffeeTeaMid = parseMiddleCategory(coffeeTea, 1);
+        MiddleCategory coffeeTeaMid = parseMiddleCategory(coffeeTea, 0);
         BottomCategory coffeeTeaBot = parseBottomCategory(coffeeTeaMid, coffee.getSheetName(), 0);
+        saveTopCategory(coffeeTea);
+        saveMiddleCategory(coffeeTeaMid);
+        saveBottomCategory(coffeeTeaBot);
 
         TopCategory lifeStyle = parseTopCategory("라이프스타일", topCount++);
-        MiddleCategory lifeStyleMid = parseMiddleCategory(lifeStyle, 1);
+        MiddleCategory lifeStyleMid = parseMiddleCategory(lifeStyle, 0);
         BottomCategory lifeStyleBot1 = parseBottomCategory(lifeStyleMid, fabric.getSheetName(), 0);
         BottomCategory lifeStyleBot2 = parseBottomCategory(lifeStyleMid, homeDeco.getSheetName(), 1);
         BottomCategory lifeStyleBot3 = parseBottomCategory(lifeStyleMid, fancy.getSheetName(), 2);
+        saveTopCategory(lifeStyle);
+        saveMiddleCategory(lifeStyleMid);
+        saveBottomCategory(lifeStyleBot1);
+        saveBottomCategory(lifeStyleBot2);
+        saveBottomCategory(lifeStyleBot3);
 
         TopCategory coffeeBeverageGift = parseTopCategory("커피/음료/e-gift", topCount);
-        MiddleCategory coffeeBeverageGiftMid = parseMiddleCategory(coffeeBeverageGift, 1);
+        MiddleCategory coffeeBeverageGiftMid = parseMiddleCategory(coffeeBeverageGift, 0);
         BottomCategory coffeeBeverageGiftBot1 = parseBottomCategory(coffeeBeverageGiftMid, drink.getSheetName(), 0);
         BottomCategory coffeeBeverageGiftBot2 = parseBottomCategory(coffeeBeverageGiftMid, eGift.getSheetName(), 1);
+        saveTopCategory(coffeeBeverageGift);
+        saveMiddleCategory(coffeeBeverageGiftMid);
+        saveBottomCategory(coffeeBeverageGiftBot1);
+        saveBottomCategory(coffeeBeverageGiftBot2);
 
-        // 엑셀 파일의 모든 시트를 순회하며 데이터 파싱
-//        List<EventRequestDto> eventRequestDtoList = new ArrayList<>();
-
-        int count = 0;
         for (Sheet sheet : workbook) {
             log.info("Sheet name : {}", sheet.getSheetName());
-            String categoryName = sheet.getSheetName();  // todo sheet 이름별로 topCode 생성
-
-
-            // topCategory code 생성
-            TopCategoryRequestDto requestDto = TopCategoryRequestDto.builder()
-                    .name(categoryName)
-                    .sequence(count++)
-                    .build();
-
-            topCategoryRepository.save(requestDto.toEntity(
-                    CodeGenerator.generateCode(8)));
-
-            log.info("topCategory : {}", requestDto.getName());
-            log.info("topCategory : {}", requestDto.getSequence());
-            log.info("topCategory : {}", CodeGenerator.generateCode(8));
+            String categoryName = sheet.getSheetName();
 
             for (Row row : sheet) {
-
-                if(row.getRowNum() == 0) {
-                    continue;
-                }
+                if(row.getRowNum() == 0) { continue;}
 
                 // media
                 String thumbNailMedia = getCellValue(row.getCell(0));
                 String mainMedia = getCellValue(row.getCell(6));
-//                log.info("thumbNailMedia : {}", thumbNailMedia);
-//                log.info("mainMedia : {}", mainMedia);
 
                 // product
                 String productName = getCellValue(row.getCell(1));
-                String productUUID = getCellValue(row.getCell(3));
                 String price = getCellValue(row.getCell(2));
                 String descriptionImage = getCellValue(row.getCell(7));
                 String descriptionTag = getCellValue(row.getCell(8));
-//                log.info("productName : {}", productName);
-//                log.info("productUUID : {}", productUUID);
-//                log.info("price : {}", price);
-//                log.info("descriptionImage : {}", descriptionImage);
-//                log.info("descriptionTag : {}", descriptionTag);
 
-                ProductCategoryList p = parseProductCategory(productUUID, total.getCode(), null, null);
-
-                switch (categoryName) {
-                    case "텀블러-보온병":
-                        parseProductCategory(productUUID, kitchenTable.getCode(), kitchenTableMid.getCode(), kitchenTableBot1.getCode());
-                        break;
-                    case "컵-머그":
-                        parseProductCategory(productUUID, kitchenTable.getCode(), kitchenTableMid.getCode(), kitchenTableBot2.getCode());
-                        break;
-                    case "베이커리":
-                        parseProductCategory(productUUID, food.getCode(), foodMid.getCode(), foodBot1.getCode());
-                        break;
-                    case "디저트-케이크":
-                        parseProductCategory(productUUID, food.getCode(), foodMid.getCode(), foodBot2.getCode());
-                        break;
-                    case "샐러드-샌드위치":
-                        parseProductCategory(productUUID, food.getCode(), foodMid.getCode(), foodBot3.getCode());
-                        break;
-                    case "커피용품":
-                        parseProductCategory(productUUID, coffeeTea.getCode(), coffeeTeaMid.getCode(), coffeeTeaBot.getCode());
-                        break;
-                    case "페브릭":
-                        parseProductCategory(productUUID, lifeStyle.getCode(), lifeStyleMid.getCode(), lifeStyleBot1.getCode());
-                        break;
-                    case "홈데코":
-                        parseProductCategory(productUUID, lifeStyle.getCode(), lifeStyleMid.getCode(), lifeStyleBot2.getCode());
-                        break;
-                    case "문구-팬시":
-                        parseProductCategory(productUUID, lifeStyle.getCode(), lifeStyleMid.getCode(), lifeStyleBot3.getCode());
-                        break;
-                    case "음료-요거트":
-                        parseProductCategory(productUUID, coffeeBeverageGift.getCode(), coffeeBeverageGiftMid.getCode(), coffeeBeverageGiftBot1.getCode());
-                        break;
-                    case "e-gift":
-                        parseProductCategory(productUUID, coffeeBeverageGift.getCode(), coffeeBeverageGiftMid.getCode(), coffeeBeverageGiftBot2.getCode());
-                        break;
-                    default:
-                        // 기본 처리 또는 예외 처리
-                        break;
-                }
-                log.info("categoryName : {} ", categoryName);
                 // event
                 String discountRate = getCellValue(row.getCell(4));
-//                log.info("discountRate : {}", discountRate);
 
                 // review
                 String readReview = getCellValue(row.getCell(9));
-//                log.info("review : {}", review);
 
                 // media 객체 생성
                 List<Media> mediaList = parseMedia(thumbNailMedia, mainMedia);
-                for (Media media : mediaList) {
-                    log.info("media : {}", media);
-                }
+                saveMedia(mediaList);
+
 
                 // product 객체 생성
                 Product parsedProduct = parseProduct(productName, Double.parseDouble(price), descriptionImage, descriptionTag);
-                log.info("product : {}", parsedProduct);
+                String productUUID = parsedProduct.getProductUUID();
+                saveProduct(parsedProduct);
+
+                // productCategoryList 객체 생성
+                List<ProductCategoryList> productCategoryAll = new ArrayList<>();
+                productCategoryAll.add(parseProductCategory(productUUID, total.getCode(), null, null));
+
+                switch (categoryName) {
+                    case "텀블러-보온병":
+                        productCategoryAll.add(parseProductCategory(productUUID, kitchenTable.getCode(), kitchenTableMid.getCode(), kitchenTableBot1.getCode()));
+                        break;
+                    case "컵-머그":
+                        productCategoryAll.add(parseProductCategory(productUUID, kitchenTable.getCode(), kitchenTableMid.getCode(), kitchenTableBot2.getCode()));
+                        break;
+                    case "베이커리":
+                        productCategoryAll.add(parseProductCategory(productUUID, food.getCode(), foodMid.getCode(), foodBot1.getCode()));
+                        break;
+                    case "디저트-케이크":
+                        productCategoryAll.add(parseProductCategory(productUUID, food.getCode(), foodMid.getCode(), foodBot2.getCode()));
+                        break;
+                    case "샐러드-샌드위치":
+                        productCategoryAll.add(parseProductCategory(productUUID, food.getCode(), foodMid.getCode(), foodBot3.getCode()));
+                        break;
+                    case "커피용품":
+                        productCategoryAll.add(parseProductCategory(productUUID, coffeeTea.getCode(), coffeeTeaMid.getCode(), coffeeTeaBot.getCode()));
+                        break;
+                    case "페브릭":
+                        productCategoryAll.add(parseProductCategory(productUUID, lifeStyle.getCode(), lifeStyleMid.getCode(), lifeStyleBot1.getCode()));
+                        break;
+                    case "홈데코":
+                        productCategoryAll.add(parseProductCategory(productUUID, lifeStyle.getCode(), lifeStyleMid.getCode(), lifeStyleBot2.getCode()));
+                        break;
+                    case "문구-팬시":
+                        productCategoryAll.add(parseProductCategory(productUUID, lifeStyle.getCode(), lifeStyleMid.getCode(), lifeStyleBot3.getCode()));
+                        break;
+                    case "음료-요거트":
+                        productCategoryAll.add(parseProductCategory(productUUID, coffeeBeverageGift.getCode(), coffeeBeverageGiftMid.getCode(), coffeeBeverageGiftBot1.getCode()));
+                        break;
+                    case "e-gift":
+                        productCategoryAll.add(parseProductCategory(productUUID, coffeeBeverageGift.getCode(), coffeeBeverageGiftMid.getCode(), coffeeBeverageGiftBot2.getCode()));
+                        break;
+                }
+                saveProductCategoryList(productCategoryAll);
+
 
                 // event 객체 생성
-                Integer discountRateValue = Integer.parseInt(discountRate);
+                int discountRateValue = Integer.parseInt(discountRate);
 
                 // discountRate가 0보다 큰 경우에만 저장 처리
                 if (discountRateValue > 0) {
@@ -235,19 +237,7 @@ public class CrawlingInit {
                     log.info("!productEventListProduct : {}", productEventList.getProduct());
                 }
 
-                // 임시 : eventMedia(이미지) 추가
-//                List<Media> eventMediaList = new ArrayList<>();
-//                eventMediaList = parseMedia(eventImage);
-//                for (Media media : eventMediaList) {
-//                    log.info("eventMedia : {}", media);
-//                }
-//                if (eventMediaList.size() > 0) {
-//                    EventRequestDto eventRequestDto = EventRequestDto.builder()
-//                            .eventId(event.getId())
-//                            .mediaList(eventMediaList)
-//                            .build();
-//                    eventRequestDtoList.add(eventRequestDto);
-//                }
+                // todo event 저장
 
                 // review 객체 생성
                 ObjectMapper objectMapper = new ObjectMapper();
@@ -275,7 +265,7 @@ public class CrawlingInit {
                         if (reviewImages.size() == 1) {
                             // 이미지가 1개일 때
                             reviewMediaList = parseMedia(reviewImages.get(0), reviewImages.get(0));  // 썸네일만 전달, mainMedia는 null
-                        } else if (reviewImages.size() > 1) {
+                        } else {
                             // 이미지가 2개 이상일 때
                             String thumbnailMedia = reviewImages.get(0);  // 첫 번째 이미지를 썸네일로
                             String reviewMedia = String.join(", ", reviewImages.subList(1, reviewImages.size()));  // 나머지를 mainMedia로
@@ -283,17 +273,10 @@ public class CrawlingInit {
                         }
                     }
 
-                    log.info("review : {}", reviewDto);
-                    for (Media media : reviewMediaList) {
-                        log.info("reviewMedia : {}", media);
-                    }
-
+                    saveReview(reviewDto.toEntity());
+                    saveMedia(reviewMediaList);
                 }
-
-                // todo : 데이터 저장
-
             }
-
         }
 
         workbook.close();
@@ -304,7 +287,44 @@ public class CrawlingInit {
         return cell == null ? "" : cell.getStringCellValue();
     }
 
-    // Media 파싱 메서드 (위에서 작성한 것과 동일)
+    public List<String> splitReviews(String reviewData) {
+        // 중괄호를 기준으로 각 리뷰를 나눔
+        List<String> reviews = new ArrayList<>();
+        Matcher matcher = Pattern.compile("\\{[^}]*}").matcher(reviewData);
+
+        while (matcher.find()) {
+            reviews.add(matcher.group());
+        }
+        return reviews;
+    }
+
+    // -------------------------------- parsing methods --------------------------------
+
+
+    public List<Media> parseProductDescriptionMedia(String description) {
+
+        List<String> mediaUrls = Arrays.stream(description.split(","))
+            .map(String::trim) // 각 URL에서 공백 제거
+            .toList();
+
+        List<Media> mediaList = new ArrayList<>();
+
+        int count = 0;
+        for (String mediaUrl : mediaUrls) {
+            Media media = Media.builder()
+                .mediaUrl(mediaUrl)
+                .thumbChecked(Boolean.FALSE)
+                .mediaType(MediaType.IMAGE)
+                .mediaKind(MediaKind.PRODUCT)
+                .mediaSeq(count++)
+                .build();
+            mediaList.add(media);
+
+        }
+        return mediaList;
+
+    }
+
     public List<Media> parseMedia(String thumbnailMedia, String mainMedia) {
         List<Media> mediaList = new ArrayList<>();
 
@@ -322,7 +342,7 @@ public class CrawlingInit {
         // mainMedia를 쉼표 기준으로 분리하여 각각 Media 객체로 변환
         List<String> mediaUrls = Arrays.stream(mainMedia.split(","))
                 .map(String::trim) // 각 URL에서 공백 제거
-                .collect(Collectors.toList());
+                .toList();
 
         // 나머지 이미지들은 thumbChecked = false로 설정하여 Media 객체로 추가
         for (int i = 0; i < mediaUrls.size(); i++) {
@@ -340,31 +360,18 @@ public class CrawlingInit {
         return mediaList;
     }
 
-    // Product 파싱 메서드 (위에서 작성한 것과 동일)
-
     public Product parseProduct(String productName, Double price, String descriptionImage,
                                 String descriptionTag) {
         return Product.builder()
+            .productUUID(CodeGenerator.generateCode(36))
                 .productName(productName)
                 .price(price)
-                .description(descriptionImage)
-//                .description(descriptionTag)
+                .description(descriptionTag)
+            .maxOrderCount(5)
                 .build();
     }
 
-    public List<String> splitReviews(String reviewData) {
-        // 중괄호를 기준으로 각 리뷰를 나눔
-        List<String> reviews = new ArrayList<>();
-        Matcher matcher = Pattern.compile("\\{[^}]*\\}").matcher(reviewData);
-
-        while (matcher.find()) {
-            reviews.add(matcher.group());
-        }
-        return reviews;
-    }
-
     public TopCategory parseTopCategory(String categoryName, Integer sequence) {
-
         return TopCategory.builder()
                 .name(categoryName)
                 .sequence(sequence)
@@ -373,7 +380,6 @@ public class CrawlingInit {
     }
 
     public MiddleCategory parseMiddleCategory(TopCategory topCategory, Integer sequence) {
-
         return MiddleCategory.builder()
                 .topCategory(topCategory)
                 .name("카테고리")
@@ -383,7 +389,6 @@ public class CrawlingInit {
     }
 
     public BottomCategory parseBottomCategory(MiddleCategory middleCategory, String name, Integer sequence) {
-
         return BottomCategory.builder()
                 .middleCategory(middleCategory)
                 .name(name)
@@ -393,7 +398,6 @@ public class CrawlingInit {
     }
 
     public ProductCategoryList parseProductCategory(String uuid, String topCode, String middleCode, String bottomCode) {
-
         return ProductCategoryList.builder()
                 .productUUID(uuid)
                 .topCode(topCode)
@@ -402,22 +406,39 @@ public class CrawlingInit {
                 .build();
     }
 
-    private Double parsePrice(String price) {
-        try {
-            return Double.parseDouble(price.replace("원", "").replace(",", ""));
-        } catch (NumberFormatException e) {
-            log.error("Invalid price format: {}", price);
-            return 0.0; // 기본값 설정
-        }
+    // -------------------------------- save methods --------------------------------
+    private void saveTopCategory(TopCategory topCategory) {
+        topCategoryRepository.save(topCategory);
+    }
+
+
+    private void saveBottomCategory(BottomCategory bottomCategory) {
+        bottomCategoryRepository.save(bottomCategory);
 
     }
 
-    // DB 저장 메서드 (예시로 정의)
+    private void saveMiddleCategory(MiddleCategory middleCategory) {
+        middleCategoryRepository.save(middleCategory);
+
+    }
+
+    private void saveProductCategoryList(List<ProductCategoryList> productCategoryAll) {
+        productCategoryListRepository.saveAll(productCategoryAll);
+    }
     private void saveProduct(Product product) {
-        // productRepository.save(product); (repository나 service 호출)
+        productRepository.save(product);
     }
 
     private void saveMedia(List<Media> mediaList) {
-        // mediaRepository.saveAll(mediaList); (repository나 service 호출)
+        mediaRepository.saveAll(mediaList);
     }
+
+    private void saveEvent(Event event) {
+        eventRepository.save(event);
+    }
+
+    private void saveReview(Review review) {
+        reviewRepository.save(review);
+    }
+
 }
